docs/spec/run/event-streaming/history/v0.2.2/plan.md
# Archived Implementation Plan: Run Event Streaming

计划版本：v0.2.2

归档状态：已完成并被后续版本替代。

## 1. Implementation Steps

1. 复用 `server/service/arq_queue_servcie.py:build_agent_chunk_envolope` 作为唯一
   envelope builder；`write_agent_run_stream_event` 的事件体参数统一命名为
   `payload`，继续负责 JSON 序列化和 Redis Stream 写入，不新增事件类或第二个
   builder。
2. 在 `server/service/agent_run_service.py` 删除无调用的
   `publish_agent_run_event` 和旧 `_build_agent_run_event`。
3. 保留 `read_agent_run_events`、`read_subagent_progress` 和
   `stream_agent_run_events` 的 Run 级编排；读取逻辑适配
   `event_type + payload` envelope，终止判断改用 `event_type=end`。
4. 新增 `server/utils/agent_run_utils.py:format_agent_run_sse`，仅完成 Redis
   envelope 到现有扁平 SSE frame 的转换。
5. `stream_agent_run_events` 的数据库终态兜底调用队列服务 builder，再调用
   SSE formatter；不在 AgentRunService 内手写 envelope，也不写回 Redis。
6. 在 `server/worker.py` 新增两个薄包装：普通事件统一调用
   `write_stream_event`，终态事件统一调用 `write_end_stream_event`。后者只固定
   `event_type="end"` 并把同名 `payload` 原样传给前者，不承担数据库终态、协程
   停止、缓冲刷新、取消信号清理或异常转换。
7. Worker 现有普通事件写入点改为调用 `write_stream_event`；
   `_finalize_run` 在数据库终态确实发生变化后调用 `write_end_stream_event`，
   其他调用点不直接写 `event_type="end"`。
8. 更新现有测试和 `AGENTS.md` 的当前职责说明，不修改前端契约、Redis key、
   TTL 或队列服务公开契约。

## 2. Naming Contract

- `event_type`：Redis/SSE 的事件类别和路由名称。
- `payload`：当前 `event_type` 的事件体，可以是 Agent 输出的投影，也可以是
  Worker 产生的生命周期数据。
- `envelope`：由 `run_id`、`event_type`、`thread_id`、`payload` 和
  `created_at` 组成的完整 Redis 事件。
- `write_agent_run_stream_event`、`write_stream_event` 和
  `write_end_stream_event` 对同一事件体统一使用参数名 `payload`；不再在相邻层
  交替使用 `event`、`data` 或 `chunk` 指代它。

当前 Worker 的三个 Redis 写入点中：

1. `StreamEventSmoother.release` 写入 `messages`，payload 是 Agent chunk 列表；
2. `process_agent_run` 写入 `status/running`，payload 是 Worker 生命周期数据；
3. `map_stream_event` 产生的 payload 来自 Agent chunk 的事件投影。

因此 `payload` 描述的是 envelope 中的位置和职责，不描述数据生产者。

## 3. Core Examples

### 3.1 Redis 写入

目标：`server/service/arq_queue_servcie.py:write_agent_run_stream_event`

该方法签名中的事件体参数命名为 `payload`：

```python
await write_agent_run_stream_event(
    run_id,
    "status",
    {"status": "running"},
    thread_id,
    ttl_seconds=RUN_REDIS_TTL_SECONDS,
)
```

该方法内部调用现有 `build_agent_chunk_envolope`；调用方不预先构造 envelope。

### 3.2 Worker 写入包装

目标：`server/worker.py:write_stream_event`、
`server/worker.py:write_end_stream_event`

```python
async def write_stream_event(
    run_id: str,
    event_type: str,
    payload: dict[str, Any],
    thread_id: str | None = None,
) -> str:
    return await write_agent_run_stream_event(
        run_id,
        event_type,
        payload,
        thread_id,
        ttl_seconds=RUN_REDIS_TTL_SECONDS,
    )


async def write_end_stream_event(
    run_id: str,
    payload: dict[str, Any],
    thread_id: str | None = None,
) -> str:

    return await write_stream_event(run_id, "end", payload, thread_id)
```

两个方法只表达 Worker 内部的普通写入与终态写入语义，不增加其他行为。

### 3.3 SSE 格式化

目标：`server/utils/agent_run_utils.py:format_agent_run_sse`

```python
frame = format_agent_run_sse(
    event_id,
    {
        "run_id": run_id,
        "event_type": "end",
        "thread_id": thread_id,
        "payload": {"status": "completed"},
        "created_at": created_at,
    },
)
```

输出仍为 `event: end`，且 `data` 保持前端当前使用的
`scope/type/run_id/thread_id/status/created_at` 扁平字段。

### 3.4 数据库终态兜底

目标：`server/service/agent_run_service.py:stream_agent_run_events`

```python
envelope = build_agent_chunk_envolope(
    run_id=run_id,
    event_type="end",
    thread_id=thread_id,
    payload={"status": status, "error": error},
    created_at=datetime.now(UTC).isoformat(),
)
yield format_agent_run_sse(after_id, envelope)
```

## 4. Scope Limits

- 不新增 Event model、factory、protocol 或兼容层。
- 不修改 Redis key、TTL、SSE endpoint、前端 DTO 或 Run 生命周期。
- 三个 writer 的 `payload` 含义和参数名保持一致；`write_stream_event` 不改变其
  内容，`write_end_stream_event` 只固定 `event_type="end"`。
- 两个 Worker 包装方法不负责停止 Agent 流或 Worker 任务；执行终止仍由现有
  控制流负责。

## 5. Validation

- 运行 `test/test_agent_run_service.py` 与
  `test/test_worker_stream_event_smoother.py` 中的定向 `unittest`。
- 对变更的 service、utils、Worker 和测试文件运行 `compileall`。
- 运行 `git diff --check`。
- 只修复本次包装接入直接覆盖到的 Worker 未完成代码；其余既有 Worker 改动若
  阻塞验证则单独报告。

